objects/AssociatedLocation.object
<CustomObject>
    <fields>
        <fullName>Access_DB_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Access DB External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Location.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>$CustomMetadata.License_Price__mdt.Location_New.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>TEXT(Location.VisitorAddress.County__c)</formula>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending Payment</fullName>
                    <default>true</default>
                    <label>Pending Payment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>locationFromAppRecordTypeCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether location created from Application Account Record Type.</description>
        <label>locationFromAppRecordTypeCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>visitorId__c</fullName>
        <formula>CASESAFEID(Location.VisitorAddress.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>visitorId</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>StatusValidaton</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED(Status__c) , ISPICKVAL( PRIORVALUE(Status__c) ,&apos;Active&apos;) ,ISPICKVAL( Status__c,&apos;Inactive&apos;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You cant change the Status from Active to Inactive</errorMessage>
    </validationRules>
</CustomObject>